--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <img src="1.png" alt="Bowl Picante" width="280" height="280" class="imagen-item-menu">
                 <div class="nombre-plato">YORU HEADING HERE</div>
-                <div class="precio-plato"><p>Only </p>$ $24.00</div>
+                <div class="precio-plato"><p>Only </p>$24.00</div>
                 <div class="texto-anterior">BuyNow</div>
             </div>
 
@@ -96,7 +96,7 @@
 
                 <img src="3.png" alt="Bowl Blanco" width="280" height="280" class="imagen-item-menu">
                 <div class="nombre-plato">YORU HEADING HERE</div>
-                <div class="precio-plato"><p>Only </p>$ $24.00</div>
+                <div class="precio-plato"><p>Only </p>$24.00</div>
                 <div class="texto-anterior">BuyNow</div>
             </div>
 
@@ -104,7 +104,7 @@
                 <div class="medio-circulo-derecha" style="background-color: #c5d280;"></div>
                 <img src="2.png" alt="Bowl Verde" width="280" height="280" class="imagen-item-menu">
                 <div class="nombre-plato">YORU HEADING HERE</div>
-                <div class="precio-plato"><p>Only </p>$ $24.00</div>
+                <div class="precio-plato"><p>Only </p>$24.00</div>
                 <div class="texto-anterior">BuyNow</div>
             </div>
 
@@ -202,8 +202,8 @@
         </div>
         <div class="copyright">
             © 2019 All right reserved Inc.
-            <span style="margin: 0 500px;"></span>
-            Privacy            Accessibility          Terms
+            <span class="foot"">Privacy Accessibility Terms</span>
+            
         </div>
     </footer>
 </body>
