--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hieu Bowl - California Kitchen</title>
+    <title>itzel ortix</title>
     <link rel="stylesheet" href="estilos.css">
     
 </head>
